--- a/style.css
+++ b/style.css
@@ -12,23 +12,53 @@ body{
     color: #8686b8;
     background-color: #0b0b3a;
     font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
-h1{
-    text-align: center;
-    font-weight: normal;
-    text-transform: uppercase;
-    font-size: 3.5em;
-    line-height: 1.5em;
-    margin: 10px;
+.content{
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
 }
-h1 span{
-    font-size: 1.8em;
+.content h2{
+    position: absolute;
+    /* transform: translate(-50%,-50%); */
+    font-size: 8em;
+}
+.content h2:nth-child(1){
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+.content h2:nth-child(2){
+    color: #03a9f4;
+    animation: animate 4s ease-in-out infinite;
+}
+@keyframes animate{
+    0%,100%{
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59% ,100% 52%, 100% 100%, 0% 100%);
+    }
+    50%{
+        clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+    }
+}
+.color{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    font-weight: bolder;
+    font-size: 4.0em;
 }
 .line{
     width: 100%;
-    text-align: center;
     height: 50px;
     background-color: rgb(14, 13, 66);
+    display: flex;
+    justify-content: space-around;
+
 }
 button{
     background: none;
@@ -39,14 +69,28 @@ button{
     font-size: 1.2em;
     text-transform: uppercase;
     letter-spacing: 1.5px;
-    width: 6%;
+    /* width: 6%; */
 
+}
+.stat{
+    margin-top: 20px;
 }
 .status{
     color: rgb(133, 113, 151);
-    display: inline-block;
-    width: 500px;
-    min-width: 100px
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    margin: 0px auto;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.allbox{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .mainbox{
     width: 100%;
@@ -55,11 +99,9 @@ button{
     height: 200px;
     align-items: center;
     border-radius: 0px 20px 0px 20px;
-    margin: auto auto;
     display: grid;
     grid-template-columns: repeat(var(--colNum), auto);
     /* grid-template-rows: repeat(2,1fr); */
-    grid-row: 2/3;
 }
 .box{
     /* width: 30%; */
@@ -94,21 +136,18 @@ button{
     grid-column: 6/7;
     /* grid-row: 2/3; */
 }
-.allbox{
-    display: grid;
-    grid-template-rows: repeat(3,1fr);
-}
 button:hover{
-    border: 2px solid rgb(147, 147, 195);
-    border-radius: 10px;
+    
     cursor: pointer;
-    box-shadow: #8686b8;
-    font-weight: bold;
+    color: #0b0b3a;
+    background-color: rgb(117, 117, 143);
+    border-radius: 30px;
 }
 
 .bubble img{
     width: 50px;
     animation: bubble 7s linear infinite;
+    /* visibility: hidden; */
     
 }
 .bubble{
@@ -183,3 +222,103 @@ button:hover{
     animation-delay: 1s;
     width: 50px;
 }
+
+
+@media only screen and (max-width: 1500px) {
+    .content{
+        height: 150px;
+    }
+    .content h2{
+        font-size: 6em;
+    }
+  }
+@media only screen and (max-width: 1400px) {
+   .color{
+       font-size: 3em;
+   }
+  }
+@media only screen and (max-width: 1300px) {
+    .content{
+        height: 130px;
+    }
+    .content h2{
+        font-size: 4em;
+    }
+    .color{
+        font-size: 2em;
+    }
+    :root {
+        --colNum: 3;
+        --colWidth: 1fr;
+    }
+    .mainbox{
+        height: 400px;
+        justify-content: space-around;
+        max-width: 800px;
+    }
+    .box{
+        width: 100px;
+        height: 100px;
+        border-radius: 33px;
+    }
+    #one{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    #two{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    #three{
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    #four{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    #five{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    #six{
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+  }
+@media only screen and (max-width: 800px) {
+    .content{
+        height: 120px;
+    }
+    .content h2{
+        font-size: 3em;
+    }
+    .color{
+        font-size: 1.5em;
+    }
+  }
+@media only screen and (max-width: 900px) {
+    .mainbox{
+        height: 300px;
+        justify-content: space-around;
+        max-width: 600px;
+    }
+  }
+@media only screen and (max-width: 600px) {
+    .content{
+        height: 100px;
+    }
+    .content h2{
+        font-size: 2.5em;
+    }
+    .mainbox{
+        height: 300px;
+        justify-content: space-around;
+        max-width: 450px;
+    }
+    .box{
+        width: 80px;
+        height: 80px;
+        border-radius: 26px;
+    }
+  }
